# cursor-lock

./: Add-WindowsCrateFeatures.ps1  Cargo.toml  README.md
src/: chimes.rs  clip_cursor.rs  focus.rs  hotkeys.rs  main.rs  monitors.rs  toggle_key.rs
