[package]
name = "cursor-lock"
version = "0.1.0"
edition = "2021"
description = "A Windows tool to lock your cursor to the bounds of a given monitor, to help when playing games that fail to do so."

[dependencies]
color-eyre = "0.6.3"
ctrlc = "3.4.5"
eyre = "0.6.12"
rodio = "0.20.1"
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Devices_Display", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_System", "Win32_System_LibraryLoader"] }
